# RCBot-Svencoop-CMake

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/dlls/: .gitignore  CMakeLists.txt  HPB_bot.plg  HPB_bot.sln  bot.cpp  bot.h  bot_client.cpp  bot_client.h  bot_commands.cpp  bot_const.h  bot_ga.cpp  bot_navigate.cpp  bot_nn.cpp  bot_weapons.cpp  bot_weapons.h  cbase.h  cdll_dll.h  client.cpp  dll.cpp  engine.cpp  engine.h  extdll.h  ga.cpp  ga.h  generic_class.h  globals.cpp  h_export.cpp  h_export.h  linkent.cpp  linkent.h  log_meta.h  megahal.cpp  mklinkgame.sh  mplugin.h  netmessages.cpp  perceptron.cpp  perceptron.h  plinfo.h  som.cpp  util.cpp  (+3 more)
src/dlls/ents/: brainbread  czero  theship  thetrenches  trevenge  zombiepanic
src/shared/: Platform.h
